objects/maps__AssignmentPlanRun__c.object
<CustomObject>
    <fields>
        <fullName>maps__AssignmentPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Assignment Plan</description>
        <label>Assignment Plan</label>
        <referenceTo>maps__AssignmentPlan__c</referenceTo>
        <relationshipLabel>Maps Assignment Plan</relationshipLabel>
        <relationshipName>AssignmentPlanRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__BatchIterationCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Batch Iteration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__BatchJobId__c</fullName>
        <label>Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BatchSize__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__CacheEndTime__c</fullName>
        <label>Cache End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__CacheStartTime__c</fullName>
        <label>Cache Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__Error__c</fullName>
        <description>This is the main error mesage</description>
        <label>Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__ProcessingEndTime__c</fullName>
        <label>Processing End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__ProcessingStartTime__c</fullName>
        <label>Processing Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__QueryLimitHit__c</fullName>
        <description>Query Limit Hit</description>
        <formula>maps__QueryLimit__c - maps__RecordsTotal__c == 0</formula>
        <inlineHelpText>Query Limit Reached</inlineHelpText>
        <label>Query Limit Hit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__QueryLimit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Query Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RecordsAssignedCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records Assigned Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RecordsErrorCount__c</fullName>
        <label>Records Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RecordsNotAssignedCount__c</fullName>
        <description>Number of Records Not Assigned</description>
        <formula>maps__RecordsTotal__c - maps__RecordsAssignedCount__c - maps__RecordsErrorCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Records Not Assigned</inlineHelpText>
        <label>Records Not Assigned Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RecordsTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Caching</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Maps Assignment Plan Run</label>
    <nameField>
        <label>Maps Assignment Plan Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Assignment Plans Run</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>